fix top spacing of the main content

--- a/frontend/assets/styles/ant-design.less
+++ b/frontend/assets/styles/ant-design.less
@@ -1,6 +1,7 @@
 @import '~ant-design-vue/dist/antd.less';
 
 @primary-color: #4331E9;
+@main-light: #eaeaeb;
 @modal-body-padding: 0px;
 @dropdown-selected-color: @text-color;
 @border-width-base: 2px;
